# weekly-rundown

./: BUILD.bazel  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  docker-compose.yml  go.mod
cmd/healthcheck/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
internal/db/: BUILD.bazel  db.go  db_test.go
internal/handlers/: BUILD.bazel  formatting.go  handlers.go  handlers_test.go
internal/markup/: BUILD.bazel  markup.go  markup_test.go
