load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "server",
    embed = [
        ":server_lib",
    ],
    pure = "on",
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/chickenandpork/weekly-rundown/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/db",
        "//internal/handlers",
    ],
)
